release 1.7
- Fixed issue 700
  http://java.net/jira/browse/JERSEY-700
  Guice-specific annotations replaced with their JSR330 standard counterparts.
- Introduced new property ClientConfig.PROPERTY_THREADPOOL_SIZE for limiting
  thread pool size used for handling asynchronous requests.
- Apache HTTP Client 4.x integration
  Refer to the module:
        <groupId>com.sun.jersey.contribs</groupId>
        <artifactId>jersey-apache-client4</artifactId>
- Fixed issue 707
  http://java.net/jira/browse/JERSEY-707
  Added human readable http status to URLConnectionResponse.toString()
- Fixed issue 690
  http://java.net/jira/browse/JERSEY-690
  Added javadoc to DefaultClientConfig constructors
- Fixed issue 647
  http://java.net/jira/browse/JERSEY-647
  NullPointerException in AbstractImplicitViewMethod.toString now fixed.
- Fixed issue 695
  http://java.net/jira/browse/JERSEY-695
  For query parameters of a primitive type blank value is now taken as if the value is not present at all - i.e. default value will be used.
- Fixed issue 703
  http://java.net/jira/browse/JERSEY-703
  Fixed a typo in UriTemplate javadoc.
- Fixed issue 717
  http://java.net/jira/browse/JERSEY-717
  Fixed UriInfo.getMatchedURIs() and getMatchedURIs(boolean)
- Fixed issue 715
  http://java.net/jira/browse/JERSEY-715
  NullPointerException instead of IllegalArgumentException when passing null name to UriBuilder.replaceMatrixParam()
- Fixed issue 716
  http://java.net/jira/browse/JERSEY-716
  NullPointerException when passing null to values argument of UriBuilder.replaceMatrixParam()
- *Breaking change*: Added support for 2-legged OAuth in oauth-server module.
  As a result, 2 new methods were added to the OAuthConsumer interface: getPrincipal()
  and isInRole() - these are used by the security context in case of 2-legged oauth
  (i.e. no token in the oauth header). Existing users of the previous versions of
  the oauth-server module should add a simple implementation of getPrincipal() always